made navbar sticky, added paralex effect, fixed grid positioning on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@ header[bigscreen="false"] {
 	display: none;
 }
 header {
+	position: fixed;
+	top: 0;
+	z-index: 20;
 	width: 100%;
 	display: flex;
 	justify-content: space-around;
@@ -83,7 +86,7 @@ header a:active {
 
 .swiper-container {
 	width: 100%;
-	height: 450px;
+	height: 100vh;
 	margin: 0;
 	cursor: grab;
 }
@@ -107,7 +110,7 @@ header a:active {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 450px;
+	height: 100vh;
 	background: rgba(77, 71, 71, 0.4);
 }
 
@@ -128,7 +131,8 @@ header a:active {
 }
 .swiper-slide img {
 	width: 100%;
-	height: 100%;
+	height: 100vh;
+	object-fit: cover;
 }
 .swiper-pagination-bullet {
 	background: white !important;
@@ -142,7 +146,7 @@ header a:active {
 }
 .brownText {
 	padding: 25px 0;
-	color: #987b50;
+	color: #ffbd5b;
 }
 /* Grid containing all pictures */
 .gridInnerHomepage {
@@ -159,6 +163,27 @@ header a:active {
 .gridInnerHomepage div {
 	width: 75%;
 }
+@media screen and (min-width: 860px) {
+	.gridInnerHomepage div[down="true"],
+	img[down="true"] {
+		display: block;
+	}
+	.gridInnerHomepage div[down="false"],
+	img[down="false"] {
+		display: none;
+	}
+}
+@media screen and (max-width: 860px) {
+	.gridInnerHomepage div[down="true"],
+	img[down="true"] {
+		display: none;
+	}
+	.gridInnerHomepage div[down="false"],
+	img[down="false"] {
+		display: block;
+	}
+}
+
 .gridInnerHomepage div span {
 	color: #a4d7c1;
 	padding-top: 2px;
@@ -172,10 +197,22 @@ header a:active {
 }
 #aboutus {
 	padding-bottom: 90px;
+	background-image: url(../images/aboutBackground.jpeg);
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-color: rgba(0, 0, 0, 0.7);
+	background-blend-mode: multiply;
 }
+
 #menu {
 	padding: 25px 0;
 	background-image: url(../images/menuBackground.jpg);
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 	color: #dfe0d7;
 	font-size: 30px;
 	line-height: 40px;
@@ -234,7 +271,7 @@ header a:active {
 	color: rgb(255, 255, 255);
 }
 #contactInnerText > div:last-child h3 {
-	color: #987b50;
+	color: #ffbd5b;
 }
 #contactInnerText > div:last-child div:first-child {
 	padding-bottom: 30px;
